fix scroll option list by adding call out webkit on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2846,6 +2846,11 @@ html.dark {
   overflow-y: auto;
   scroll-behavior: contain;
 }
+@supports (-webkit-touch-callout: none) {
+  .form__options-list {
+    padding-bottom: 300px;
+  }
+}
 @media (max-width: 767.98px) {
   .form__options-list {
     max-height: 265px;
